# lib-geopycat

./: 404.html  LICENCE  README.md  index.html  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
cli_tools/Backup_geocat/: index.html
cli_tools/Delete_unused_subtemplates/: index.html
cli_tools/Restore_mef/: index.html
cli_tools/save_and_close/: index.html
docs/: Backup_geocat.md  Delete_unused_subtemplates.md  Installation.md  getting-started.md  index.md  save_and_close.md
docs/cli_tools/: Backup_geocat.md  Delete_unused_subtemplates.md  Restore_mef.md  save_and_close.md
docs/tools/: Delete_unused_subtemplates.md
geocat/: index.html
geopycat/: __init__.py  geocat.py  settings.py  utils.py
geopycat/GeocatBackup/: __init__.py  backup_generator.py  restore.py
geopycat/subtemplate/: __init__.py  delete_unused_subtpl.py  subtemplate.py
getting-started/: index.html
search/: search_index.json
