[metadata]
name = geopycat
version = 0.1.0
author = Benoit G. Regamey
author_email = benoit.regamey@swisstopo.ch
description = Manage metadata and data of geocat.ch - a geonetwork instance for Switzerland
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests >=2.25.1
    urllib3 >=1.26.6
    python-dotenv >=0.20.0
    psycopg2 >= 2.9.3
python_requires = >=3.7